WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270872
REGRESSION (
275981@main
): [ macOS ] 7 tests in TestWebKitAPI.WKWebExtensionAPIPermissions are a constant failure/timeout
https://bugs.webkit.org/show_bug.cgi?id=270872
Summary
REGRESSION (275981@main): [ macOS ] 7 tests in TestWebKitAPI.WKWebExtensionAP...
Marta Darbinyan
Reported
2024-03-12 13:21:43 PDT
Description: Failing test: TestWebKitAPI.WKWebExtensionAPITabs.QueryWithAccessPrompt Timeout tests: TestWebKitAPI.WKWebExtensionAPIPermissions.RequestPermissionsOnly TestWebKitAPI.WKWebExtensionAPIPermissions.RequestMatchPatternsOnly TestWebKitAPI.WKWebExtensionAPIPermissions.GrantOnlySomePermissions TestWebKitAPI.WKWebExtensionAPIPermissions.GrantOnlySomeMatchPatterns TestWebKitAPI.WKWebExtensionAPIPermissions.DenyPermissionsRequest TestWebKitAPI.WKWebExtensionAPIPermissions.ClipboardWriteWithRequest TestWebKitAPI.WKWebExtensionAPIPermissions.AcceptPermissionsDenyMatchPatternsRequest are consistent failure/timeout since
275981@main
History:
https://results.webkit.org/?suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&test=TestWebKitAPI.WKWebExtensionAPITabs.QueryWithAccessPrompt&test=TestWebKitAPI.WKWebExtensionAPIPermissions.AcceptPermissionsDenyMatchPatternsRequest&test=TestWebKitAPI.WKWebExtensionAPIPermissions.ClipboardWriteWithRequest&test=TestWebKitAPI.WKWebExtensionAPIPermissions.DenyPermissionsRequest&test=TestWebKitAPI.WKWebExtensionAPIPermissions.GrantOnlySomeMatchPatterns&test=TestWebKitAPI.WKWebExtensionAPIPermissions.GrantOnlySomePermissions&test=TestWebKitAPI.WKWebExtensionAPIPermissions.RequestMatchPatternsOnly&test=TestWebKitAPI.WKWebExtensionAPIPermissions.RequestPermissionsOnly
Result: Failed TestWebKitAPI.WKWebExtensionAPITabs.QueryWithAccessPrompt webkit-extension://1c48a8e5-eba8-43b7-90da-aefc6f9738ac/background.js:5First tab URL should be localhostwebkit-extension://1c48a8e5-eba8-43b7-90da-aefc6f9738ac/background.js:9First tab URL should be localhost Timeout TestWebKitAPI.WKWebExtensionAPIPermissions.AcceptPermissionsDenyMatchPatternsRequest TestWebKitAPI.WKWebExtensionAPIPermissions.ClipboardWriteWithRequest TestWebKitAPI.WKWebExtensionAPIPermissions.DenyPermissionsRequest TestWebKitAPI.WKWebExtensionAPIPermissions.GrantOnlySomeMatchPatterns TestWebKitAPI.WKWebExtensionAPIPermissions.GrantOnlySomePermissions TestWebKitAPI.WKWebExtensionAPIPermissions.RequestMatchPatternsOnly TestWebKitAPI.WKWebExtensionAPIPermissions.RequestPermissionsOnly
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-12 13:22:19 PDT
<
rdar://problem/124475393
>
Timothy Hatcher
Comment 2
2024-03-12 15:11:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25794
EWS
Comment 3
2024-03-12 16:06:29 PDT
Committed
276003@main
(b74a5a42516e): <
https://commits.webkit.org/276003@main
> Reviewed commits have been landed. Closing PR #25794 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug